--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -12,7 +12,7 @@
     "index.js"
   ],
   "dependencies": {
-    "@fbi-js/eslint-config": "0.0.0",
+    "@fbi-js/eslint-config": "^0.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "eslint-config-standard-with-typescript": "^19.0.1"
   },
