--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -12,7 +12,7 @@
     "index.js"
   ],
   "dependencies": {
-    "vue-eslint-parser": "^7.3.0",
+    "@fbi-js/eslint-config": "^0.0.0",
     "eslint-plugin-vue": "^7.4.0"
   },
   "peerDependencies": {
