--- a/packages/eslint-config-react-typescript/package.json
+++ b/packages/eslint-config-react-typescript/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@fbi-js/eslint-config-react",
+  "name": "@fbi-js/eslint-config-react-typescript",
   "version": "0.0.0",
   "description": "fbi js eslint config",
-  "homepage": "https://github.com/fbi-js/config/tree/master/packages/eslint-config-react",
+  "homepage": "https://github.com/fbi-js/config/tree/master/packages/eslint-config-react-typescript",
   "repository": "fbi-js/config",
   "license": "MIT",
   "contributors": [
@@ -12,10 +12,8 @@
     "index.js"
   ],
   "dependencies": {
-    "@fbi-js/eslint-config": "^0.0.0",
-    "eslint-config-standard-jsx": "^10.0.0",
-    "eslint-config-standard-react": "^11.0.1",
-    "eslint-plugin-react": "^7.21.5"
+    "@fbi-js/eslint-config-react": "^0.0.0",
+    "@fbi-js/eslint-config-typescript": "^0.0.0"
   },
   "peerDependencies": {
     "eslint": ">= 7.16.0"
