--- a/packages/webpack-config-base/package.json
+++ b/packages/webpack-config-base/package.json
@@ -43,7 +43,8 @@
     "webpack": "^5.11.1",
     "webpackbar": "^5.0.0-3",
     "eslint-webpack-plugin": "^2.4.1",
-    "stylelint-webpack-plugin": "^2.1.1"
+    "stylelint-webpack-plugin": "^2.1.1",
+    "webpack-dev-server": "4.0.0-beta.0"
   },
   "devDependencies": {
     "@fbi-js/tsconfig": "^0.0.0",
