--- a/packages/webpack-config-vue/package.json
+++ b/packages/webpack-config-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fbi-js/webpack-config-vue",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "@fbi-js/tsconfig": "^0.0.0",
+    "@fbi-js/stylelint-config": "^0.0.0",
+    "@fbi-js/eslint-config-vue-typescript": "^0.0.0",
     "eslint": "^7.16.0",
     "eslint-webpack-plugin": "^2.4.1",
     "stylelint": "^13.8.0",
