--- a/packages/webpack-config-react/package.json
+++ b/packages/webpack-config-react/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@fbi-js/tsconfig": "^0.0.0",
+    "@fbi-js/webpack-config-base": "^0.0.0",
     "@fbi-js/eslint-config-react-typescript": "^0.0.0",
     "webpack-merge": "^5.7.3",
     "eslint": "^7.16.0",
@@ -33,7 +34,6 @@
     "stylelint-webpack-plugin": "^2.1.1"
   },
   "devDependencies": {
-    "webpack": "^5.11.1",
-    "@fbi-js/webpack-config-base": "^0.0.0"
+    "webpack": "^5.11.1"
   }
 }
