--- a/packages/webpack-config-vue/package.json
+++ b/packages/webpack-config-vue/package.json
@@ -23,9 +23,10 @@
   },
   "dependencies": {
     "@fbi-js/tsconfig": "^0.0.0",
+    "@fbi-js/webpack-config-base": "^0.0.0",
     "@fbi-js/stylelint-config": "^0.0.0",
     "@fbi-js/eslint-config-vue-typescript": "^0.0.0",
-    "eslint": "^7.16.0",
+    "eslint": "^7.17.0",
     "eslint-webpack-plugin": "^2.4.1",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
@@ -36,7 +37,6 @@
     "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
-    "webpack": "^5.11.1",
-    "@fbi-js/webpack-config-base": "^0.0.0"
+    "webpack": "^5.11.1"
   }
 }
