--- a/packages/webpack-config-base/package.json
+++ b/packages/webpack-config-base/package.json
@@ -30,7 +30,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "copy-webpack-plugin": "^7.0.0",
-    "html-webpack-plugin": "^5.0.0-beta.1",
+    "html-webpack-plugin": "^5.0.0-beta.3",
     "mini-css-extract-plugin": "^1.3.3",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "fork-ts-checker-webpack-plugin": "^6.0.8",
@@ -42,13 +42,18 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.11.1",
     "webpackbar": "^5.0.0-3",
+    "eslint": "^7.17.0",
     "eslint-webpack-plugin": "^2.4.1",
+    "stylelint": "^13.8.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
-    "webpack-dev-server": "4.0.0-beta.0"
+    "webpack-dev-server": "4.0.0-beta.0",
+    "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
     "@fbi-js/tsconfig": "^0.0.0",
-    "@types/copy-webpack-plugin": "^6.3.0",
+    "@types/copy-webpack-plugin": "^6.4.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/webpack-dev-server": "^3.11.1",
     "@types/mini-css-extract-plugin": "^1.2.2"
