--- a/packages/webpack-config-react/package.json
+++ b/packages/webpack-config-react/package.json
@@ -22,16 +22,10 @@
     "access": "public"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.12.10",
     "@fbi-js/tsconfig": "^0.0.0",
     "@fbi-js/webpack-config-base": "^0.0.0",
-    "@fbi-js/eslint-config-react-typescript": "^0.0.0",
-    "webpack-merge": "^5.7.3",
-    "eslint": "^7.16.0",
-    "eslint-webpack-plugin": "^2.4.1",
-    "stylelint": "^13.8.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-webpack-plugin": "^2.1.1"
+    "@fbi-js/eslint-config-react-typescript": "^0.0.0"
   },
   "devDependencies": {
     "webpack": "^5.11.1"
