--- a/packages/webpack-config-base/package.json
+++ b/packages/webpack-config-base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fbi-js/webpack-config-base",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -28,34 +28,34 @@
     "@babel/preset-typescript": "^7.12.7",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
     "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "eslint": "^7.17.0",
+    "eslint-webpack-plugin": "^2.4.1",
+    "fork-ts-checker-webpack-plugin": "^6.0.8",
     "html-webpack-plugin": "^5.0.0-beta.3",
     "mini-css-extract-plugin": "^1.3.3",
-    "css-minimizer-webpack-plugin": "^1.1.5",
-    "fork-ts-checker-webpack-plugin": "^6.0.8",
     "postcss": "^8.2.2",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.32.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.11.1",
-    "webpackbar": "^5.0.0-3",
-    "eslint": "^7.17.0",
-    "eslint-webpack-plugin": "^2.4.1",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
+    "webpack": "^5.11.1",
     "webpack-dev-server": "4.0.0-beta.0",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "webpackbar": "^5.0.0-3"
   },
   "devDependencies": {
-    "@fbi-js/tsconfig": "^0.0.0",
+    "@fbi-js/tsconfig": "^0.0.1",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
-    "@types/webpack-dev-server": "^3.11.1",
-    "@types/mini-css-extract-plugin": "^1.2.2"
+    "@types/mini-css-extract-plugin": "^1.2.2",
+    "@types/webpack-dev-server": "^3.11.1"
   }
 }
