--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@fbi-js/eslint-config": "^0.0.1",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "eslint-config-standard-with-typescript": "^19.0.1"
+    "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint-plugin-standard": "^5.0.0"
   },
   "peerDependencies": {
     "eslint": ">=7.17.0",
