--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fbi-js/eslint-config-typescript",
   "version": "0.0.3",
-  "description": "fbi js eslint config",
+  "description": "ESLint config for Typescript project",
   "homepage": "https://github.com/fbi-js/config/tree/master/packages/eslint-config-typescript",
   "repository": "fbi-js/config",
   "license": "MIT",
