--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@fbi-js/tsconfig",
   "version": "0.0.2",
-  "description": "fbi js eslint config",
-  "homepage": "https://github.com/fbi-js/config/tree/master/packages/eslint-config",
+  "description": "tsconfig collection",
+  "homepage": "https://github.com/fbi-js/config/tree/master/packages/tsconfig",
   "repository": "fbi-js/config",
   "license": "MIT",
   "contributors": [
