--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "tests/*"
   ],
   "scripts": {
-    "dev": "lerna run dev",
-    "build": "lerna run --parallel build",
+    "dev": "lerna run dev --scope @fbi-js/*",
+    "build": "lerna run build --scope @fbi-js/*",
     "lint": "eslint packages/*/src/**/*.ts",
     "format": "prettier --write packages/*/src/**/*.ts",
     "clean": "lerna run --parallel clean",
-    "release": "lerna publish"
+    "changeset": "changeset",
+    "bump": "changeset version",
+    "release": "yarn build && changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.12.0",
     "@fbi-js/factory-node": "^2.1.0",
     "eslint": "^7.17.0",
     "rimraf": "^3.0.2"
