--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -14,14 +14,8 @@
     "react.json",
     "vue.json"
   ],
-  "dependencies": {
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1"
-  },
   "peerDependencies": {
-    "eslint": ">= 7.16.0"
+    "typescript": ">=3.9"
   },
   "publishConfig": {
     "access": "public"
