--- a/packages/webpack-config-base/package.json
+++ b/packages/webpack-config-base/package.json
@@ -36,12 +36,14 @@
     "eslint": "^7.17.0",
     "eslint-webpack-plugin": "^2.4.1",
     "fork-ts-checker-webpack-plugin": "^6.0.8",
-    "html-webpack-plugin": "^5.0.0-beta.3",
+    "html-webpack-plugin": "^5.0.0-beta.4",
+    "less": "^4.0.0",
+    "less-loader": "^7.2.1",
     "mini-css-extract-plugin": "^1.3.3",
     "postcss": "^8.2.2",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
-    "sass": "^1.32.0",
+    "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "stylelint": "^13.8.0",
@@ -54,7 +56,7 @@
     "webpackbar": "^5.0.0-3"
   },
   "devDependencies": {
-    "@fbi-js/tsconfig": "^1.0.0",
+    "@fbi-js/tsconfig": "^1.0.2",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/mini-css-extract-plugin": "^1.2.2",
