--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@fbi-js/eslint-config": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "eslint-config-standard-with-typescript": "^19.0.1",
-    "eslint-plugin-standard": "^5.0.0"
+    "@typescript-eslint/parser": "^4.12.0",
+    "eslint-import-resolver-typescript": "^2.3.0"
   },
   "peerDependencies": {
     "eslint": ">=7.17.0",
