--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fbi-js/stylelint-config",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "StyleLint config",
   "homepage": "https://github.com/fbi-js/config/tree/master/packages/stylelint-config",
   "repository": "fbi-js/config",
@@ -26,6 +26,8 @@
     "access": "public"
   },
   "eslintConfig": {
-    "extends": ["../eslint-config"]
+    "extends": [
+      "../eslint-config"
+    ]
   }
 }
