--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fbi-js/eslint-config-vue",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "ESLint config for Vue.js project",
   "homepage": "https://github.com/fbi-js/config/tree/master/packages/eslint-config-vue",
   "repository": "fbi-js/config",
@@ -15,7 +15,7 @@
     "format": "prettier -cw index.js && npx eslint index.js --fix"
   },
   "dependencies": {
-    "@fbi-js/eslint-config": "^1.1.0",
+    "@fbi-js/eslint-config": "^1.2.0",
     "eslint-plugin-vue": "^7.4.1"
   },
   "peerDependencies": {
@@ -25,6 +25,8 @@
     "access": "public"
   },
   "eslintConfig": {
-    "extends": ["../eslint-config"]
+    "extends": [
+      "../eslint-config"
+    ]
   }
 }
