--- a/packages/webpack-config-base/package.json
+++ b/packages/webpack-config-base/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import":"^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
