--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -15,13 +15,16 @@
     "format": "prettier -cw index.js && npx eslint index.js --fix"
   },
   "dependencies": {
+    "eslint-config-prettier": "^7.2.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.2.1"
   },
   "peerDependencies": {
-    "eslint": ">= 7.17.0"
+    "eslint": ">= 7.17.0",
+    "prettier": ">= 2.2.0"
   },
   "publishConfig": {
     "access": "public"
