--- a/packages/webpack-config-base/package.json
+++ b/packages/webpack-config-base/package.json
@@ -29,6 +29,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
+    "@opd/css-modules-typings-loader": "^1.0.5",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
