--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "fbi-config-workspace",
   "private": true,
-  "workspaces": ["packages/*", "examples/*"],
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
   "scripts": {
     "dev": "lerna run dev --scope @fbi-js/*",
     "build": "lerna run build --scope @fbi-js/*",
@@ -18,13 +21,16 @@
     "@types/jest": "^26.0.20",
     "eslint": "^7.17.0",
     "jest": "^26.6.3",
+    "jest-serializer-path": "^0.1.15",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.4.4"
   },
   "license": "MIT",
   "eslintConfig": {
-    "extends": ["./packages/eslint-config-typescript"]
+    "extends": [
+      "./packages/eslint-config-typescript"
+    ]
   },
   "prettier": {
     "semi": false,
