--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "fbi-config-workspace",
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "examples/*"
-  ],
+  "workspaces": ["packages/*", "examples/*"],
   "scripts": {
     "dev": "lerna run dev --scope @fbi-js/*",
     "build": "lerna run build --scope @fbi-js/*",
@@ -16,21 +13,20 @@
     "release": "yarn build && changeset publish"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.12.0",
-    "@fbi-js/factory-node": "^2.1.0",
+    "@changesets/cli": "^2.13.1",
     "@types/jest": "^26.0.20",
-    "eslint": "^7.17.0",
+    "eslint": "^7.18.0",
+    "lerna": "^3.22.1",
     "jest": "^26.6.3",
     "jest-serializer-path": "^0.1.15",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.4.4"
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   },
   "license": "MIT",
   "eslintConfig": {
-    "extends": [
-      "./packages/eslint-config-typescript"
-    ]
+    "extends": ["./packages/eslint-config-typescript"]
   },
   "prettier": {
     "semi": false,
