--- a/packages/eslint-config-react-typescript/package.json
+++ b/packages/eslint-config-react-typescript/package.json
@@ -19,7 +19,13 @@
     "@fbi-js/eslint-config-typescript": "^1.2.0"
   },
   "peerDependencies": {
-    "eslint": ">= 7.17.0"
+    "eslint": ">=7.18.0",
+    "typescript": ">=3.9"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   },
   "publishConfig": {
     "access": "public"
