--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -5,31 +5,41 @@
   "homepage": "https://github.com/fbi-js/config/tree/master/packages/eslint-config-typescript",
   "repository": "fbi-js/config",
   "license": "MIT",
-  "contributors": [
-    "neikvon <neikvon@hotmail.com>"
-  ],
-  "files": [
-    "index.js"
-  ],
+  "contributors": ["neikvon <neikvon@hotmail.com>"],
+  "files": ["index.js"],
   "scripts": {
     "format": "prettier -cw index.js && npx eslint index.js --fix"
   },
   "dependencies": {
     "@fbi-js/eslint-config": "^1.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "eslint-import-resolver-typescript": "^2.3.0"
   },
   "peerDependencies": {
-    "eslint": ">=7.17.0",
-    "typescript": ">=3.9"
+    "eslint": ">=7.18.0",
+    "typescript": ">=3.9",
+    "eslint-plugin-import":">=2.22"
+  },
+  "peerDependenciesMeta": {
+    "eslint": {
+      "optional": true
+    },
+    "typescript": {
+      "optional": true
+    },
+    "eslint-plugin-import": {
+      "optional": true
+    }
+  },
+  "devDependencies": {
+    "typescript": "^4.1.3",
+    "eslint-plugin-import":"^2.22.1"
   },
   "publishConfig": {
     "access": "public"
   },
   "eslintConfig": {
-    "extends": [
-      "../eslint-config"
-    ]
+    "extends": ["../eslint-config"]
   }
 }
