--- a/packages/eslint-config-vue-typescript/package.json
+++ b/packages/eslint-config-vue-typescript/package.json
@@ -5,12 +5,8 @@
   "homepage": "https://github.com/fbi-js/config/tree/master/packages/eslint-config-vue-typescript",
   "repository": "fbi-js/config",
   "license": "MIT",
-  "contributors": [
-    "neikvon <neikvon@hotmail.com>"
-  ],
-  "files": [
-    "index.js"
-  ],
+  "contributors": ["neikvon <neikvon@hotmail.com>"],
+  "files": ["index.js"],
   "scripts": {
     "format": "prettier -cw index.js && npx eslint index.js --fix"
   },
@@ -19,14 +15,18 @@
     "@fbi-js/eslint-config-vue": "^1.2.0"
   },
   "peerDependencies": {
-    "eslint": ">= 7.17.0"
+    "eslint": ">=7.18.0",
+    "typescript": ">=3.9"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   },
   "publishConfig": {
     "access": "public"
   },
   "eslintConfig": {
-    "extends": [
-      "../eslint-config"
-    ]
+    "extends": ["../eslint-config"]
   }
 }
