--- a/packages/webpack-config-base/package.json
+++ b/packages/webpack-config-base/package.json
@@ -6,9 +6,7 @@
   "repository": "fbi-js/config",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "engines": {
     "node": ">=10"
   },
@@ -25,7 +23,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
@@ -36,7 +33,6 @@
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
-    "eslint": "^7.18.0",
     "eslint-webpack-plugin": "^2.4.3",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "html-webpack-plugin": "^5.0.0-beta.6",
@@ -49,24 +45,46 @@
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.9.0",
     "stylelint-webpack-plugin": "^2.1.1",
     "webpack-merge": "^5.7.3",
     "webpackbar": "^5.0.0-3"
   },
-  "peerDependencies": {
-    "webpack": ">=5",
-    "webpack-dev-server": ">=4"
-  },
+
   "devDependencies": {
     "@fbi-js/tsconfig": "^1.2.0",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
-    "@types/mini-css-extract-plugin": "^1.2.2"
+    "@types/mini-css-extract-plugin": "^1.2.2",
+    "@babel/core": "^7.12.10",
+    "eslint": "^7.18.0",
+    "stylelint": "^13.9.0",
+    "webpack": "^5.18.0"
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.12.10",
+    "eslint": ">=7.18.0",
+    "stylelint": ">=13",
+    "webpack": ">=5",
+    "webpack-dev-server": ">=4"
+  },
+  "peerDependenciesMeta": {
+    "@babel/core": {
+      "optional": true
+    },
+    "eslint": {
+      "optional": true
+    },
+    "stylelint": {
+      "optional": true
+    },
+    "webpack": {
+      "optional": true
+    },
+    "webpack-dev-server": {
+      "optional": true
+    }
   },
   "eslintConfig": {
-    "extends": [
-      "../eslint-config-typescript"
-    ]
+    "extends": ["../eslint-config-typescript"]
   }
 }
