--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "fbi-config-workspace",
   "private": true,
-  "workspaces": ["packages/*", "examples/*"],
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
   "scripts": {
     "dev": "lerna run dev --scope @fbi-js/*",
     "build": "lerna run build --scope @fbi-js/*",
@@ -15,10 +18,11 @@
   "devDependencies": {
     "@changesets/cli": "^2.13.1",
     "@types/jest": "^26.0.20",
+    "@types/stylelint": "^9.10.1",
     "eslint": "^7.18.0",
-    "lerna": "^3.22.1",
     "jest": "^26.6.3",
     "jest-serializer-path": "^0.1.15",
+    "lerna": "^3.22.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.4.4",
@@ -26,7 +30,9 @@
   },
   "license": "MIT",
   "eslintConfig": {
-    "extends": ["./packages/eslint-config-typescript"]
+    "extends": [
+      "./packages/eslint-config-typescript"
+    ]
   },
   "prettier": {
     "semi": false,
