--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@fbi-js/eslint-config-typescript",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "ESLint config for Typescript project",
   "homepage": "https://github.com/fbi-js/config/tree/master/packages/eslint-config-typescript",
   "repository": "fbi-js/config",
   "license": "MIT",
-  "contributors": ["neikvon <neikvon@hotmail.com>"],
-  "files": ["index.js"],
+  "contributors": [
+    "neikvon <neikvon@hotmail.com>"
+  ],
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "format": "prettier -cw index.js && npx eslint index.js --fix"
   },
   "dependencies": {
-    "@fbi-js/eslint-config": "^1.2.0",
+    "@fbi-js/eslint-config": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint-import-resolver-typescript": "^2.3.0"
@@ -19,7 +23,7 @@
   "peerDependencies": {
     "eslint": ">=7.18.0",
     "typescript": ">=3.9",
-    "eslint-plugin-import":">=2.22"
+    "eslint-plugin-import": ">=2.22"
   },
   "peerDependenciesMeta": {
     "eslint": {
@@ -34,12 +38,14 @@
   },
   "devDependencies": {
     "typescript": "^4.1.3",
-    "eslint-plugin-import":"^2.22.1"
+    "eslint-plugin-import": "^2.22.1"
   },
   "publishConfig": {
     "access": "public"
   },
   "eslintConfig": {
-    "extends": ["../eslint-config"]
+    "extends": [
+      "../eslint-config"
+    ]
   }
 }
