--- a/packages/eslint-config-vue-typescript/package.json
+++ b/packages/eslint-config-vue-typescript/package.json
@@ -1,18 +1,22 @@
 {
   "name": "@fbi-js/eslint-config-vue-typescript",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "ESLint config for Vue.js+Typescript project",
   "homepage": "https://github.com/fbi-js/config/tree/master/packages/eslint-config-vue-typescript",
   "repository": "fbi-js/config",
   "license": "MIT",
-  "contributors": ["neikvon <neikvon@hotmail.com>"],
-  "files": ["index.js"],
+  "contributors": [
+    "neikvon <neikvon@hotmail.com>"
+  ],
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "format": "prettier -cw index.js && npx eslint index.js --fix"
   },
   "dependencies": {
-    "@fbi-js/eslint-config-typescript": "^1.2.0",
-    "@fbi-js/eslint-config-vue": "^1.2.0"
+    "@fbi-js/eslint-config-typescript": "^1.2.1",
+    "@fbi-js/eslint-config-vue": "^1.2.1"
   },
   "peerDependencies": {
     "eslint": ">=7.18.0",
@@ -27,6 +31,8 @@
     "access": "public"
   },
   "eslintConfig": {
-    "extends": ["../eslint-config"]
+    "extends": [
+      "../eslint-config"
+    ]
   }
 }
