--- a/packages/webpack-config-base/package.json
+++ b/packages/webpack-config-base/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@fbi-js/webpack-config-base",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Webpack base config",
   "homepage": "https://github.com/fbi-js/config/tree/master/packages/webpack-config-base",
   "repository": "fbi-js/config",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "engines": {
     "node": ">=10"
   },
@@ -49,9 +51,8 @@
     "webpack-merge": "^5.7.3",
     "webpackbar": "^5.0.0-3"
   },
-
   "devDependencies": {
-    "@fbi-js/tsconfig": "^1.2.0",
+    "@fbi-js/tsconfig": "^1.2.1",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/mini-css-extract-plugin": "^1.2.2",
@@ -85,6 +86,8 @@
     }
   },
   "eslintConfig": {
-    "extends": ["../eslint-config-typescript"]
+    "extends": [
+      "../eslint-config-typescript"
+    ]
   }
 }
