--- a/packages/webpack-config-vue/package.json
+++ b/packages/webpack-config-vue/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@fbi-js/webpack-config-vue",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Webpack config for Vue.js project",
   "homepage": "https://github.com/fbi-js/config/tree/master/packages/webpack-config-vue",
   "repository": "fbi-js/config",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "engines": {
     "node": ">=10"
   },
@@ -23,10 +25,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@fbi-js/eslint-config-vue-typescript": "^1.2.0",
-    "@fbi-js/stylelint-config": "^1.2.0",
-    "@fbi-js/tsconfig": "^1.2.0",
-    "@fbi-js/webpack-config-base": "^1.5.1",
+    "@fbi-js/eslint-config-vue-typescript": "^1.2.1",
+    "@fbi-js/stylelint-config": "^1.2.1",
+    "@fbi-js/tsconfig": "^1.2.1",
+    "@fbi-js/webpack-config-base": "^1.5.2",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
   },
@@ -40,6 +42,8 @@
     }
   },
   "eslintConfig": {
-    "extends": ["../eslint-config-typescript"]
+    "extends": [
+      "../eslint-config-typescript"
+    ]
   }
 }
