--- a/examples/js/package.json
+++ b/examples/js/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@fbi-js/eslint-config": "^1.1.0",
     "@fbi-js/webpack-config-base": "^1.2.1",
+    "webpack-dev-server": "4.0.0-beta.0",
     "eslint": "^7.17.0",
     "webpack": "^5.13.0",
     "webpack-cli": "^4.3.1"
