--- a/examples/react-js/package.json
+++ b/examples/react-js/package.json
@@ -22,9 +22,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webpack": "^5.13.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "4.0.0-beta.0"
   },
   "eslintConfig": {
-    "extends": ["@fbi-js/react"]
+    "extends": [
+      "@fbi-js/react"
+    ]
   }
 }
