--- a/examples/react-ts/package.json
+++ b/examples/react-ts/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^17.0.1",
     "typescript": "^4.1.3",
     "webpack": "^5.13.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "4.0.0-beta.0"
   },
   "eslintConfig": {
     "extends": [
