--- a/examples/ts/package.json
+++ b/examples/ts/package.json
@@ -14,13 +14,16 @@
   "author": "",
   "license": "ISC",
   "eslintConfig": {
-    "extends": ["@fbi-js/typescript"]
+    "extends": [
+      "@fbi-js/typescript"
+    ]
   },
   "devDependencies": {
     "@fbi-js/eslint-config-typescript": "^1.1.0",
     "@fbi-js/webpack-config-base": "^1.2.1",
     "@fbi-js/tsconfig": "^1.1.1",
     "eslint": "^7.17.0",
+    "webpack-dev-server": "4.0.0-beta.0",
     "typescript": "^4.1.3",
     "webpack": "^5.13.0",
     "webpack-cli": "^4.3.1"
