--- a/examples/vue-ts/package.json
+++ b/examples/vue-ts/package.json
@@ -22,11 +22,14 @@
     "typescript": "^4.1.3",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
+    "webpack-dev-server": "4.0.0-beta.0",
     "webpack": "^5.13.0",
     "webpack-cli": "^4.3.1"
   },
   "eslintConfig": {
-    "extends": ["@fbi-js/vue-typescript"]
+    "extends": [
+      "@fbi-js/vue-typescript"
+    ]
   },
   "prettier": {
     "semi": false,
