feat(webpack-config-react):add svgr/webpack loader

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,8 @@
   "vetur.format.styleInitialIndent": true,
   "vetur.format.scriptInitialIndent": true,
   "vetur.format.defaultFormatter.js": "vscode-typescript",
-  "vetur.format.defaultFormatter.ts": "vscode-typescript"
+  "vetur.format.defaultFormatter.ts": "vscode-typescript",
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "numso.prettier-standard-vscode"
+  }
 }
