--- a/packages/webpack-config-react/package.json
+++ b/packages/webpack-config-react/package.json
@@ -33,8 +33,9 @@
     "react-refresh": "^0.9.0"
   },
   "devDependencies": {
-    "webpack": "^5.17.0",
-    "@babel/core": "^7.12.10"
+    "@babel/core": "^7.12.10",
+    "@svgr/webpack": "^5.5.0",
+    "webpack": "^5.17.0"
   },
   "peerDependenciesMeta": {
     "webpack-dev-server": {
