--- a/examples/vue-js/package.json
+++ b/examples/vue-js/package.json
@@ -14,10 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "@fbi-js/eslint-config-vue": "^1.1.0",
+    "@fbi-js/webpack-config-vue": "^1.3.4",
     "eslint": "^7.17.0",
     "vue": "^2.6.12",
-    "webpack-dev-server": "4.0.0-beta.0",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "webpack-dev-server": "4.0.0-beta.0"
   },
   "eslintConfig": {
     "extends": [
