--- a/examples/react-ts/package.json
+++ b/examples/react-ts/package.json
@@ -14,23 +14,28 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@fbi-js/eslint-config-react-typescript": "^1.1.0",
-    "@fbi-js/tsconfig": "^1.1.1",
-    "@fbi-js/webpack-config-base": "^1.2.1",
-    "@fbi-js/webpack-config-react": "^1.1.1",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "eslint": "^7.17.0",
+    "@fbi-js/eslint-config-react-typescript": "^1.2.1",
+    "@fbi-js/tsconfig": "^1.2.1",
+    "@fbi-js/webpack-config-base": "^1.5.4",
+    "@fbi-js/webpack-config-react": "^1.3.4",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "eslint": "^7.20.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "typescript": "^4.1.3",
-    "webpack": "^5.13.0",
-    "webpack-cli": "^4.3.1",
+    "typescript": "4.1.5",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "4.0.0-beta.0"
   },
   "eslintConfig": {
     "extends": [
       "@fbi-js/react-typescript"
+    ]
+  },
+  "stylelint": {
+    "extends": [
+      "@fbi-js/stylelint-config"
     ]
   }
 }
