--- a/examples/ts/package.json
+++ b/examples/ts/package.json
@@ -19,13 +19,13 @@
     ]
   },
   "devDependencies": {
-    "@fbi-js/eslint-config-typescript": "^1.1.0",
-    "@fbi-js/webpack-config-base": "^1.2.1",
-    "@fbi-js/tsconfig": "^1.1.1",
-    "eslint": "^7.17.0",
+    "@fbi-js/eslint-config-typescript": "^1.2.1",
+    "@fbi-js/webpack-config-base": "^1.5.4",
+    "@fbi-js/tsconfig": "^1.2.1",
+    "eslint": "^7.20.0",
     "webpack-dev-server": "4.0.0-beta.0",
-    "typescript": "^4.1.3",
-    "webpack": "^5.13.0",
-    "webpack-cli": "^4.3.1"
+    "typescript": "4.1.5",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0"
   }
 }
