--- a/examples/vue-ts/package.json
+++ b/examples/vue-ts/package.json
@@ -7,29 +7,32 @@
   "scripts": {
     "lint": "npx eslint src",
     "build": "NODE_ENV=production webpack",
-    "serve": "webpack serve",
+    "serve": "NODE_ENV=development webpack serve",
     "format": "prettier -cw \"src/*.{ts,css,less,scss,vue}\" && npx eslint --ext ts,vue src --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@fbi-js/eslint-config-vue-typescript": "^1.1.0",
-    "@fbi-js/tsconfig": "^1.1.1",
-    "@fbi-js/webpack-config-base": "^1.2.1",
-    "@fbi-js/webpack-config-vue": "^1.1.1",
-    "eslint": "^7.17.0",
-    "typescript": "^4.1.3",
+    "@fbi-js/eslint-config-vue-typescript": "^1.2.1",
+    "@fbi-js/tsconfig": "^1.2.1",
+    "@fbi-js/webpack-config-base": "^1.5.4",
+    "@fbi-js/webpack-config-vue": "^1.3.4",
+    "eslint": "^7.20.0",
+    "typescript": "4.1.5",
     "vue": "^2.6.12",
-    "vue-router": "^3.4.9",
+    "vue-router": "^3.5.1",
     "webpack-dev-server": "4.0.0-beta.0",
-    "webpack": "^5.13.0",
-    "webpack-cli": "^4.3.1"
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0"
   },
   "eslintConfig": {
     "extends": [
       "@fbi-js/vue-typescript"
     ]
+  },
+  "stylelint": {
+    "extends": ["@fbi-js/stylelint-config"]
   },
   "prettier": {
     "semi": false,
