--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "release": "yarn build && changeset publish"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.13.1",
+    "@changesets/cli": "^2.14.1",
     "@types/jest": "^26.0.20",
     "@types/stylelint": "^9.10.1",
-    "eslint": "^7.18.0",
+    "eslint": "^7.20.0",
     "jest": "^26.6.3",
     "jest-serializer-path": "^0.1.15",
     "lerna": "^3.22.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "ts-jest": "^26.5.2",
+    "typescript": "4.1.5"
   },
   "license": "MIT",
   "eslintConfig": {
