--- a/packages/eslint-config-react-typescript/package.json
+++ b/packages/eslint-config-react-typescript/package.json
@@ -20,7 +20,7 @@
   },
   "peerDependencies": {
     "eslint": ">=7.18.0",
-    "typescript": ">=3.9"
+    "typescript": ">=3.9 <4.2.0"
   },
   "peerDependenciesMeta": {
     "typescript": {
