--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -16,13 +16,13 @@
   },
   "dependencies": {
     "@fbi-js/eslint-config": "^1.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint-import-resolver-typescript": "^2.3.0"
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint-import-resolver-typescript": "^2.4.0"
   },
   "peerDependencies": {
     "eslint": ">=7.18.0",
-    "typescript": ">=3.9",
+    "typescript": ">=3.9 <4.2.0",
     "eslint-plugin-import": ">=2.22"
   },
   "peerDependenciesMeta": {
@@ -37,7 +37,7 @@
     }
   },
   "devDependencies": {
-    "typescript": "^4.1.3",
+    "typescript": "4.1.5",
     "eslint-plugin-import": "^2.22.1"
   },
   "publishConfig": {
