--- a/packages/webpack-config-base/package.json
+++ b/packages/webpack-config-base/package.json
@@ -25,29 +25,30 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.5",
+    "@babel/preset-typescript": "^7.13.0",
     "@opd/css-modules-typings-loader": "^1.0.5",
+    "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.0.2",
     "css-minimizer-webpack-plugin": "^1.2.0",
-    "eslint-webpack-plugin": "^2.4.3",
-    "fork-ts-checker-webpack-plugin": "^6.1.0",
-    "html-webpack-plugin": "^5.0.0-beta.6",
-    "less": "^4.1.0",
-    "less-loader": "^7.3.0",
-    "mini-css-extract-plugin": "^1.3.4",
-    "postcss": "^8.2.4",
-    "postcss-loader": "^4.2.0",
+    "eslint-webpack-plugin": "^2.5.2",
+    "html-webpack-plugin": "^5.2.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
+    "mini-css-extract-plugin": "^1.3.8",
+    "postcss": "^8.2.6",
+    "postcss-loader": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
-    "sass": "^1.32.5",
-    "sass-loader": "^10.1.1",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
+    "url-loader":"^4.1.1",
     "webpack-merge": "^5.7.3",
     "webpackbar": "^5.0.0-3"
   },
@@ -56,13 +57,13 @@
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/mini-css-extract-plugin": "^1.2.2",
-    "@babel/core": "^7.12.10",
-    "eslint": "^7.18.0",
-    "stylelint": "^13.9.0",
-    "webpack": "^5.18.0"
+    "@babel/core": "^7.13.1",
+    "eslint": "^7.20.0",
+    "stylelint": "^13.11.0",
+    "webpack": "^5.24.2"
   },
   "peerDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.13.1",
     "eslint": ">=7.18.0",
     "stylelint": ">=13",
     "webpack": ">=5",
