--- a/packages/webpack-config-react/package.json
+++ b/packages/webpack-config-react/package.json
@@ -25,17 +25,17 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-react": "^7.12.13",
     "@fbi-js/eslint-config-react-typescript": "^1.2.1",
+    "@fbi-js/stylelint-config": "^1.2.1",
     "@fbi-js/tsconfig": "^1.2.1",
     "@fbi-js/webpack-config-base": "^1.5.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "react-refresh": "^0.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@svgr/webpack": "^5.5.0",
-    "webpack": "^5.17.0"
+    "@babel/core": "^7.13.1",
+    "webpack": "^5.24.2"
   },
   "peerDependenciesMeta": {
     "webpack-dev-server": {
