--- a/packages/webpack-config-vue/package.json
+++ b/packages/webpack-config-vue/package.json
@@ -30,11 +30,12 @@
     "@fbi-js/tsconfig": "^1.2.1",
     "@fbi-js/webpack-config-base": "^1.5.4",
     "vue-loader": "^15.9.6",
+    "vue-svg-loader":"^0.17.0-beta.2",
     "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
-    "webpack": "^5.17.0",
-    "css-loader": "^5.0.1"
+    "webpack": "^5.24.2",
+    "css-loader": "^5.0.2"
   },
   "peerDependenciesMeta": {
     "css-loader": {
