--- a/examples/vue-ts/package.json
+++ b/examples/vue-ts/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "npx eslint src",
     "build": "NODE_ENV=production webpack",
-    "serve": "NODE_ENV=development webpack serve",
+    "serve": "NODE_ENV=development webpack serve --config webpack.config.ts",
     "format": "prettier -cw \"src/*.{ts,css,less,scss,vue}\" && npx eslint --ext ts,vue src --fix"
   },
   "keywords": [],
@@ -22,9 +22,9 @@
     "typescript": "4.1.5",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
-    "webpack-dev-server": "4.0.0-beta.0",
     "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "4.0.0-beta.0"
   },
   "eslintConfig": {
     "extends": [
@@ -32,8 +32,15 @@
     ]
   },
   "stylelint": {
-    "extends": ["@fbi-js/stylelint-config"]
+    "extends": [
+      "@fbi-js/stylelint-config"
+    ]
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
   "prettier": {
     "semi": false,
     "singleQuote": true,
